--- a/AppTestInApps/app/src/main/AndroidManifest.xml
+++ b/AppTestInApps/app/src/main/AndroidManifest.xml
@@ -2,13 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.tunbi.apptestinapps" >
 
+    <uses-permission android:name="android.permission.BILLING"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name="tunbi.apptestinapps.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,7 +19,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".HomeActivity"
+            android:name="tunbi.apptestinapps.HomeActivity"
             android:label="@string/app_name" >
         </activity>
     </application>
